fixed path issues added lab 8